Refactor Sonar