@@ -5,19 +5,17 @@ import java.nio.file.Files;
 import java.util.List;
 import java.util.regex.MatchResult;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 public class Trebuchet {
 
-    public List<String> getStringFromFile(String fileName) throws IOException {
+    public List<String> getStringFromFile(String path) throws IOException {
 
-        File file = new File(fileName);
+        File file = new File(path);
         InputStream is = Files.newInputStream(file.toPath());
         Reader reader = new InputStreamReader(is);
-        BufferedReader r = new BufferedReader(reader);
-        return r.lines().collect(Collectors.toList());
-                // r.lines().map(this::getCalibrationValue).reduce((a, b) -> a + b).orElse(-1);
-
+        try (BufferedReader r = new BufferedReader(reader)) {
+            return r.lines().toList();
+        }
     }
 
     public int getCalibrationValue(String input) {
